--- a/DJsite/users/templates/main/search_of_users.html
+++ b/DJsite/users/templates/main/search_of_users.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'main/base.html' %}
 {% block content %}
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -52,6 +52,6 @@
 {% endif %}
 
 <div id="replaceable-content" class="col-6">
-	{% include 'posts-results-partial.html' %}
+	{% include 'main/posts-results-partial.html' %}
 </div>
 {% endblock content %}
