--- a/DJsite/users/templates/authentication/login.html
+++ b/DJsite/users/templates/authentication/login.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends '../main/base.html' %}
 {% block content %}
 
 <div class="login-form">
@@ -14,6 +14,8 @@
 		<label class="login-form" for="{{ f.id_for_label }}">{{ f.label }}</label>{{ f }}
 		<div class="form-error">{{ f.errors }}</div>
 	{% endfor %}
+	
+	<p style="font-size: 15px;"><a style="text-decoration: none;" href="{% url 'reset_password' %}">Forgot password?</a></p>
 
 	<button type="submit" class="submit-button">Login</button>
 </form>
