Made first step for new registration system

--- a/DJsite/users/templates/authentication/password/password_reset_confirm.html
+++ b/DJsite/users/templates/authentication/password/password_reset_confirm.html
@@ -8,7 +8,13 @@
   <h1 class="register-form">Password Reset Confirm</h1>
   <form method="post" class="edit-user-form register-form">
     {% csrf_token %} 
-    {{ form }} 
+    
+    {% for f in form %}
+      <label class="login-form" for="{{ f.id_for_label }}">{{ f.label }}</label>{{ f }}
+      {{ f.help_text }}
+      <div class="form-error">{{ f.errors }}</div>
+    {% endfor %} 
+    
     <button type="submit" class="submit-button">Reset password</button>
   </form>
 {% else %}
