--- a/DJsite/users/templates/main/continued-registration.html
+++ b/DJsite/users/templates/main/continued-registration.html
@@ -23,7 +23,6 @@
 		<div class="form-error">{{ f.errors }}</div>
 	{% endfor %}
 
-    <input class="submit-button" type="submit" value="Submit">
-    <a href="{% url url pk=pk %}"><input class="delete-confirm-button" type="button" value="Delete {{ position }}"></a>
+    <input class="submit-button" type="submit" value="Register">
 </form>
 {% endblock content %}
