--- a/DJsite/users/templates/main/list_of_users.html
+++ b/DJsite/users/templates/main/list_of_users.html
@@ -15,7 +15,7 @@
 <h1>List of {{ user_class }}</h1>
 
 {% load static %}
-{% if left_side_posts %}
+{% if right_side_posts %}
 	
 	{% include 'main/list_of_users_for_double_table.html' %}
 
