--- a/DJsite/users/templates/main/profile.html
+++ b/DJsite/users/templates/main/profile.html
@@ -9,7 +9,7 @@
 <div class="container rounded bg-white mt-5 mb-5">
     <div class="row">
         <div class="col-md-3 border-right" style="min-height: 540px;">
-            <div class="d-flex flex-column align-items-center text-center p-3 py-5"><img class="rounded-circle mt-5" width="150px" src="{{ profile.photo.url }}"><span class="font-weight-bold">{{ profile.first_name }} {{ profile.last_name }}</span><span class="text-black-50">{{ profile.email }}</span><span> </span></div>
+            <div class="d-flex flex-column align-items-center text-center p-3 py-5"><img class="rounded-circle mt-5" width="150px" src="{{ profile.photo.url }}"><span class="font-weight-bold">{{ profile.user.username }} </span><span class="text-black-50">{{ profile.user.email }}</span><span> </span></div>
         </div>
         <div class="col-md-5 border-right" style="min-height: 540px;">
             <div class="p-3 py-5">
@@ -21,13 +21,13 @@
 	                   {% endif %}
                 </div>
                 <div class="row mt-2">
-                    <div class="col-md-6"><label class="labels">First name</label><p><span class="profile-value">{{ profile.first_name }}</span></p></div>
-                    <div class="col-md-6"><label class="labels">Last name</label><p><span class="profile-value">{{ profile.last_name }}</span></p></div>
+                    <div class="col-md-6"><label class="labels">First name</label><p><span class="profile-value">{{ profile.user.first_name }}</span></p></div>
+                    <div class="col-md-6"><label class="labels">Last name</label><p><span class="profile-value">{{ profile.user.last_name }}</span></p></div>
                 </div>
                 <div class="row mt-3">
                     <div class="col-md-12"><label class="labels">City</label><p><span class="profile-value">{{ profile.city }}</span></p></div>
                     <div class="col-md-12"><label class="labels">Birthday</label><p><span class="profile-value">{{ profile.birthday }}</span></p></div>
-                    <div class="col-md-12"><label class="labels">Email</label><p><span class="profile-value">{{ profile.email }}</span></p></div>
+                    <div class="col-md-12"><label class="labels">Email</label><p><span class="profile-value">{{ profile.user.email }}</span></p></div>
                     <div class="col-md-12"><label class="labels">Phone number</label><p><span class="profile-value">{{ profile.phone_number }}</span></p></div>
                 </div>
                 <div class="row mt-3">
