--- a/DJsite/users/templates/main/base.html
+++ b/DJsite/users/templates/main/base.html
@@ -21,9 +21,17 @@
 <ul class="menu-bar">
   {% if request.user.is_authenticated %}
     {% if title in no_profile_anchor %}
-      <li class="username">{{ user.username }}</li>
+      <li class="username">{{ user.username }}
+        {% if filled is False %}
+          [unfilled]
+        {% endif %}
+      </li>
     {% else %}
-      <a href="{% url 'user-profile' username=user.username %}"><li class="username">{{ user.username }}</li></a>
+      <a style="color: inherit; text-decoration: none;" href="{% url 'user-profile' username=user.username %}"><li class="username">{{ user.username }}</a>
+        {% if filled is False %}
+          <a style="color: inherit; text-decoration: none;" href="{% url 'register-next-step' pk=user.pk %}" title="Fill profile">[unfilled]</a>
+        {% endif %}
+      </li></a>
     {% endif %}
   {% endif %}
   
