--- a/DJsite/users/templates/main/index.html
+++ b/DJsite/users/templates/main/index.html
@@ -21,5 +21,12 @@ Hello stranger!
 If you want to use this site, you should register or login, if you already did one.
 {% endif %}
 
+{% if filled is False %}
+! Attention !
+Your profile is not filled by additional information.
+You won't see yourself in any list. Searching page will ignore your profile.
+Noone can find you on this site.
+{% endif %}
+
 </pre>
 {% endblock content %}
