--- a/DJsite/users/static/users/css/styles.css
+++ b/DJsite/users/static/users/css/styles.css
@@ -580,6 +580,13 @@ form.search-form-selector button {
 	background-position: center -10px;
 	background-size: 30%;
 }
+.Forbidden-error-img {
+	background-image: url('../images/403.png');
+	min-height: 100vh;
+	background-repeat: no-repeat;
+	background-position: center -10px;
+	background-size: 30%;
+}
 
 .hidden_label_teacher {
 	display: none;
@@ -674,6 +681,38 @@ form.search-form-selector button {
 	outline: none;
 	border: 1px solid #CCCCCC;
 	resize: none;
+}
+.edit-profile-info {
+	box-shadow:inset 0px 1px 0px 0px #bbdaf7;
+	background:linear-gradient(to bottom, #79bbff 5%, #378de5 100%);
+	background-color:#79bbff;
+	border-radius:6px;
+	border:1px solid #84bbf3;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:15px;
+	font-weight:bold;
+	width: 30px;
+	height: 30px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #528ecc;
+	margin-top: 9px;
+	outline: none;
+}
+.edit-profile-info:hover {
+	background:linear-gradient(to bottom, #378de5 5%, #79bbff 100%);
+	background-color:#378de5;
+	outline: none;
+}
+.edit-profile-info:active {
+	position:relative;
+	top:1px;
+	outline: none;
+}
+.edit-profile-info:focus {
+	outline: none;
 }
 
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
