--- a/DJsite/users/templates/main/edit_user.html
+++ b/DJsite/users/templates/main/edit_user.html
@@ -17,6 +17,13 @@
 <form class="edit-user-form" enctype='multipart/form-data' method="post">
     {% csrf_token %}
     <div class="form-error"> {{ form.non_field_errors }} </div>
+    
+    {% for f in form2 %}
+		<label class="form-label" for="{{ f.id_for_label }}">{{ f.label }}:</label>
+		<div class="edit-user-form-fields">{{ f }}</div>
+		<div class="form-error">{{ f.errors }}</div>
+	{% endfor %}
+
     {% for f in form %}
 		<label class="form-label" for="{{ f.id_for_label }}">{{ f.label }}:</label>
 		<div class="edit-user-form-fields">{{ f }}</div>
