--- a/DJsite/users/templates/authentication/login.html
+++ b/DJsite/users/templates/authentication/login.html
@@ -1,6 +1,16 @@
 {% extends '../main/base.html' %}
 {% block content %}
 
+{% block messages %}
+	{% if messages %}
+		<ul class="messages" id="successMessage">
+    	{% for message in messages %}
+    		<li {% if message.tags %} class="{{ message.tags }}"{% endif %}> {{ message }} </li>
+    	{% endfor %}
+		</ul>
+	{% endif %}
+{% endblock messages %}
+
 <div class="login-form">
 
 <h1 class="login-form"> {{ title }} </h1>
