--- a/DJsite/users/templates/main/index.html
+++ b/DJsite/users/templates/main/index.html
@@ -3,7 +3,7 @@
 
 {% block messages %}
 	{% if messages %}
-		<ul class="messages" id='successMessage'>
+		<ul class="messages" id="successMessage">
     	{% for message in messages %}
     		<li {% if message.tags %} class="{{ message.tags }}"{% endif %}> {{ message }} </li>
     	{% endfor %}
