--- a/DJsite/users/templates/main/posts-results-partial.html
+++ b/DJsite/users/templates/main/posts-results-partial.html
@@ -18,33 +18,27 @@
     </tr>
 	
 	{% for post in posts %}
-		<tr>
-			{% if "admin" in groups %}
-				<td><a href="{% url 'edit-user' pk=post.pk %}"><button class="edit-user-button">E</button></a></td>
-			{% endif %}
-
-			<td><a href="{{ post.get_absolute_url }}"><button class="show-user-button">S</button></a></td>
-
-			{% for value in post %}
-				{% if value.url %}
-					{% if value.url|slice:":19" == '/media/user_resume/' %}
-						<td><img src="{% static 'users/images/resume.png' %}" class="user-list-photo"></td>
-					{% else %}
-						<td><img src="{{value.url}}" class="user-list-photo"></td>
-					{% endif %}
-				{% else %}
-					<td>{{ value }}</td>
+		{% if post.filled %}	
+			<tr>
+				{% if "admin" in groups %}
+					<td><a href="{% url 'edit-user' pk=post.pk %}"><button class="edit-user-button">E</button></a></td>
 				{% endif %}
-			{% endfor %}
 
-			{% if posts.0.position == 'Teacher' %}
-				<td>
-					{% for course in post.get_teacher_courses %}
-						{{ course }} 
-					{% endfor %}
-				</td>
-			{% endif %}
-		</tr>
+				<td><a href="{{ post.get_absolute_url }}"><button class="show-user-button">S</button></a></td>
+
+				{% for value in post.get_fields_for_displaying_user_in_search %}
+						<td>{{ value }}</td>
+				{% endfor %}
+
+				{% if posts.0.position == 'Teacher' %}
+					<td>
+						{% for course in post.get_teacher_courses %}
+							{{ course }} 
+						{% endfor %}
+					</td>
+				{% endif %}
+			</tr>
+		{% endif %}
 	{% endfor %}
 	</table>
 {% else %}
