--- a/DJsite/users/templates/main/profile.html
+++ b/DJsite/users/templates/main/profile.html
@@ -3,6 +3,7 @@
 {% load static %}
 
 {% block content %}
+
 <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha1/dist/css/bootstrap.min.css">
 
 <div class="profile">
@@ -21,6 +22,17 @@
 		    {% endif %}
 
             <div class="d-flex flex-column align-items-center text-center p-3 py-5"><img class="rounded-circle mt-5" width="150px" src="{{ profile.photo.url }}"><span class="font-weight-bold">{{ profile.user.username }} </span><span class="text-black-50">{{ profile.user.email }}</span><span> </span></div>
+
+            {% block messages %}
+				{% if messages %}
+					<ul class="messages" id="successMessage">
+			    	{% for message in messages %}
+			    		<li {% if message.tags %} class="profile-{{ message.tags }}"{% endif %}> {{ message }} </li>
+			    	{% endfor %}
+					</ul>
+				{% endif %}
+			{% endblock messages %}
+
         </div>
         <div class="col-md-5 border-right" style="min-height: 540px;">
             <div class="p-3 py-5">
