Fixed problems with Fast Search by course on Links page

--- a/DJsite/users/templates/main/get-users-by-course.html
+++ b/DJsite/users/templates/main/get-users-by-course.html
@@ -4,6 +4,6 @@
 
 <h1>Position: {{position}} <br> Course: {{course.name}}</h1>
 
-{% include 'posts-results-partial.html' %}
+{% include 'main/posts-results-partial.html' %}
 
 {% endblock content %}
