--- a/DJsite/users/static/users/css/styles.css
+++ b/DJsite/users/static/users/css/styles.css
@@ -366,6 +366,7 @@ table.userlist-table-all-right tr:hover {
 	padding:5px 9px;
 	text-decoration:none;
 	text-shadow:0px 1px 0px #263666;
+	width: 30px;
 }
 .edit-user-button:hover {
 	background:linear-gradient(to bottom, #0688fa 5%, #2dabf9 100%);
@@ -389,6 +390,7 @@ table.userlist-table-all-right tr:hover {
 	padding:5px 9px;
 	text-decoration:none;
 	text-shadow:0px 1px 0px #2f6627;
+	width: 30px;
 }
 .show-user-button:hover {
 	background:linear-gradient(to bottom, #5cbf2a 5%, #45c74e 100%);
