--- a/DJsite/users/templates/errors/403.html
+++ b/DJsite/users/templates/errors/403.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 {% if msg %}
-<h4 style="text-align: center;">Msg: {{ msg }}</h4>
+<h4 style="text-align: center;">{{ msg }}</h4>
 {% endif %}
 
 <div class="Forbidden-error-img"></div>
