--- a/DJsite/users/templates/errors/404.html
+++ b/DJsite/users/templates/errors/404.html
@@ -1,10 +1,13 @@
 {% extends '../main/base.html' %}
+
 {% block content %}
-<h4 style="text-align: center;">Msg: {{ msg }}</h4>
+
+<h4 style="text-align: center;">{{ msg }}</h4>
 
 {% if link %}
 	<h4 style="text-align: center;"><a href="{{ link }}">{{ link_text }}</a></h4>
 {% endif %}
 
 <div class="NotFound-error-img"></div>
+
 {% endblock content %}
