--- a/DJsite/users/templates/main/profile.html
+++ b/DJsite/users/templates/main/profile.html
@@ -21,7 +21,7 @@
 			      	<a href="{% url 'edit-user' pk=profile.user.pk %}"><button class="edit-profile-info" title="Edit Profile"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></button></a>
 		    {% endif %}
 
-            <div class="d-flex flex-column align-items-center text-center p-3 py-5"><img class="rounded-circle mt-5" width="150px" src="{{ profile.photo.url }}"><span class="font-weight-bold">{{ profile.user.username }} </span><span class="text-black-50">{{ profile.user.email }}</span><span> </span></div>
+            <div class="d-flex flex-column align-items-center text-center p-3 py-5"><img class="rounded-circle mt-5" width="150px" src="{{ profile.photo.url }}"><span class="font-weight-bold">{{ profile.user.nickname }} </span><span class="text-black-50">{{ profile.user.email }}</span><span> </span></div>
 
             {% block messages %}
 				{% if messages %}
