--- a/DJsite/users/templates/main/delete_user.html
+++ b/DJsite/users/templates/main/delete_user.html
@@ -4,13 +4,14 @@
     <h1>Delete {{ position }}</h1>
     <form action="" method="post">
       {% csrf_token %}
-      <p>Are you sure you want to delete?
+      <p>Are you sure you want to delete {{ user.nickname }}?
         <table class="userlist-table">
           <tr>
             <td><input class="delete-confirm-button" type="submit" value="Confirm"></td>
-            {% for value in user %}
-              <td>{{ value }}</td>
-            {% endfor %}
+              <td>{{ user.nickname }}</td>
+              <td>{{ user.email }}</td>
+              <td>{{ user.first_name }}</td>
+              <td>{{ user.last_name }}</td>
           </tr>
         </table>
     </form>
