--- a/DJsite/users/templates/main/edit_user.html
+++ b/DJsite/users/templates/main/edit_user.html
@@ -31,6 +31,6 @@
 	{% endfor %}
 
     <input class="submit-button" type="submit" value="Submit">
-    <a href="{% url url pk=pk %}"><input class="delete-confirm-button" type="button" value="Delete {{ position }}"></a>
+    <a href="{% url 'delete-user' pk=pk %}"><input class="delete-confirm-button" type="button" value="Delete {{ position }}"></a>
 </form>
 {% endblock content %}
