--- a/DJsite/users/templates/main/list_of_users_for_double_table.html
+++ b/DJsite/users/templates/main/list_of_users_for_double_table.html
@@ -12,7 +12,7 @@
     	{% endfor %}
     </tr>
 	{% for post in left_side_posts %}
-		<tr>
+		<tr {% if post.pk == user.pk %} class="self-profile" {% endif %}>
 			{% if "admin" in groups %}
 				<td><a href="{% url 'edit-user' pk=post.pk %}"><button class="edit-user-button">E</button></a></td>
 			{% endif %}
@@ -49,7 +49,7 @@
     </tr>
 	
 	{% for post in right_side_posts %}
-		<tr>
+		<tr {% if post.pk == user.pk %} class="self-profile" {% endif %}>
 			{% if "admin" in groups %}
 				<td><a href="{% url 'edit-user' pk=post.pk %}"><button class="edit-user-button">E</button></a></td>
 			{% endif %}
