--- a/DJsite/users/templates/authentication/login.html
+++ b/DJsite/users/templates/authentication/login.html
@@ -28,6 +28,9 @@
 	<p style="font-size: 15px;"><a style="text-decoration: none;" href="{% url 'reset_password' %}">Forgot password?</a></p>
 
 	<button type="submit" class="submit-button">Login</button>
+	<p><a href="{% url 'social:begin' 'github' %}" title="Login via GitHub" class="login-via-github-button">
+		<i style="font-size:20px;" class="fa fa-github" aria-hidden="true"> GitHub</i>
+	</a></p>
 </form>
 
 </div>
