Realized registration via Google.

--- a/DJsite/users/templates/authentication/login.html
+++ b/DJsite/users/templates/authentication/login.html
@@ -31,6 +31,10 @@
 	<p><a href="{% url 'social:begin' 'github' %}" title="Login via GitHub" class="login-via-github-button">
 		<i style="font-size:20px;" class="fa fa-github" aria-hidden="true"> GitHub</i>
 	</a></p>
+
+	<p><a href="{% url 'social:begin' 'google-oauth2' %}" title="Login via Google" class="login-via-github-button">
+		<i style="font-size:20px;" class="fa fa-google" aria-hidden="true"></i> Google</i>
+	</a></p>
 </form>
 
 </div>
