--- a/DJsite/users/templates/main/index.html
+++ b/DJsite/users/templates/main/index.html
@@ -14,7 +14,7 @@
 <h1>{{ title }}</h1>
 
 {% if request.user.is_authenticated %}
-Welcome back {{user.username}}!
+Welcome back {{user.nickname}}!
 Hope you will find all that you need :)	
 {% else %}	
 Hello stranger!
